# py-multi-toolbox

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: base_actions.yml  base_workflow.yml
docker/scripts/: custom_lang_installer.sh  custom_proj_dependency_installer.sh  docker-entrypoint.sh  starter-development.sh  starter-production.sh
docs/source/: conf.py  index.rst
docs/source/pages/: arithmeticArranger.rst  intro.md
scripts/html-coverage-opener/: html-coverage-opener.py
scripts/nodeLiveRunner/: README.md  nodemon.json  package-lock.json  package.json
scripts/nodejsRunner/: package-lock.json  package.json  pyrightconfig.json
src/arithmeticArranger/: INFO.md  __init__.py  arranger.py  arranger_helpers.py  test_arranger.py
src/budgetExplorer/: INFO.md  __init__.py  budget.py  budget_chart_helpers.py  test_budget.py
src/playground/: playground.py
src/polygonHandler/: INFO.md  polygon.py  test_ploygon.py
src/probabilityCalculator/: INFO.md  probability.py  test_probability.py
src/pythonscientificcompcourse/: __main__.py  cli.py  starter.py
src/timeCalculator/: INFO.md  __init__.py  calculator.py  test_calculator.py
tests/: test_pythonscientificcompcourse.py
